--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -30,4 +30,4 @@ numeric-enum-macro = "0.2"
 percpu = "0.2.0"
 xmas-elf = "0.9"
 
-weak-map = { git = "https://github.com/Starry-OS/weak-map.git" }
+weak-map = "0.1.1"
