--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ axfeat = { git = "https://github.com/oscomp/arceos.git", features = [
 ] }
 
 axconfig = { git = "https://github.com/oscomp/arceos.git" }
+axalloc = { git = "https://github.com/oscomp/arceos.git" }
 axfs = { git = "https://github.com/oscomp/arceos.git" }
 axhal = { git = "https://github.com/oscomp/arceos.git", features = ["uspace"] }
 axlog = { git = "https://github.com/oscomp/arceos.git" }
