--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,9 @@ axtask = { git = "https://github.com/oscomp/arceos.git" }
 
 axprocess = { git = "https://github.com/Starry-OS/axprocess.git" }
 axsignal = { git = "https://github.com/Starry-OS/axsignal.git", rev = "b5b6089" }
-
+axfs_vfs = { git = "https://github.com/MF-B/axfs_crates.git" }
+axfs_devfs = { git = "https://github.com/MF-B/axfs_crates.git" }
+axfs_ramfs = { git = "https://github.com/MF-B/axfs_crates.git" }
 axerrno = "0.1"
 bitflags = "2.6"
 cfg-if = "1.0"
@@ -48,6 +50,7 @@ linux-raw-sys = { version = "0.9.3", default-features = false, features = [
     "net",
     "prctl",
     "system",
+    "ioctl",
 ] }
 memory_addr = "0.3"
 spin = "0.9"
