--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,6 +18,10 @@ axtask.workspace = true
 
 axprocess.workspace = true
 axsignal.workspace = true
+axfs_vfs.workspace = true
+axfs_devfs.workspace = true
+axfs_ramfs.workspace = true
+linux-raw-sys.workspace = true
 
 axerrno.workspace = true
 linkme.workspace = true
@@ -29,5 +33,6 @@ kernel-elf-parser = "0.3"
 numeric-enum-macro = "0.2"
 percpu = "0.2.0"
 xmas-elf = "0.9"
+axio = "0.1.1"
 
 weak-map = "0.1.1"
